✅assignemt upload ✅assignment editor ❌post assignment ❌push notifications ❌create & upload quiz

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="./assets/vendor/snow.js"></script>
   </head>
   <body class="app">
     <!-- App Loading... -->
