--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
       rel="stylesheet"
     />
     <script src="./assets/vendor/snow.js"></script>
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body class="app">
     <!-- App Loading... -->
