⚒ work around for webRTC

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
     />
     <script src="./assets/vendor/snow.js"></script>
     <link rel="manifest" href="/manifest.json" />
+    <script src="https://rtcmulticonnection.herokuapp.com/dist/RTCMultiConnection.js"></script>
   </head>
   <body class="app">
     <!-- App Loading... -->
