--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     />
     <script src="./assets/vendor/snow.js"></script>
     <link rel="manifest" href="/manifest.json" />
-    <script src="https://rtcmulticonnection.herokuapp.com/dist/RTCMultiConnection.js"></script>
+    <!-- <script src="https://rtcmulticonnection.herokuapp.com/dist/RTCMultiConnection.js"></script> -->
   </head>
   <body class="app">
     <!-- App Loading... -->
